Global user id created, page dispose settings saved on sql with current user id assigned

--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -30,13 +30,14 @@
   <script defer src="js/drawCanvas.js"></script>
   <script defer src="js/text.js"></script>
 
-  <script src="https://cdn.ckeditor.com/ckeditor5/41.2.1/classic/ckeditor.js"></script>
+  <script src="https://cdn.ckeditor.com/ckeditor5/41.2.1/classic/ckeditor.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
   <header>
     <a class="navbar-brand" href="#">ProjetoX</a>
+    <button id="saveButton">save</button>
     <div class="theme-switch">
       <input type="checkbox" id="theme-checkbox" />
       <label for="theme-checkbox">
