--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ProjetoX</title>
 
+    <script>
+      const current_user = '<%- user %>';
+      const current_page = '<%- page %>';
+    </script>  
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -26,11 +31,15 @@
 
   <link rel="stylesheet" href="css/details_css/day_night.css">
 
-  <script defer src="js/script.js"></script>
+  <script src="js/script.js" defer></script>  
+  
   <script defer src="js/drawCanvas.js"></script>
-  <script defer src="js/text.js"></script>
+  <script defer src="js/loadPage.js"></script>
 
   <script src="https://cdn.ckeditor.com/ckeditor5/41.2.1/classic/ckeditor.js" crossorigin="anonymous"></script>
+
+
+  
 
 </head>
 
@@ -108,15 +117,7 @@
   <footer>
 
   </footer>
-
-  <script>
-    ClassicEditor
-    .create(document.querySelector("#editor"))
-    .catch(error => {
-  console.error(error);
-    });
-  </script>
-
+  
 </body>
 
 </html>
