Dark mode almost fixed, pages description added

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/sign_in_css/index_main.css">
   <link rel="stylesheet" href="css/details_css/day_night.css">
 
-  <script defer src="js/script.js"></script>
+  <script defer src="js/scriptCadastro.js"></script>
 
   <script></script>
 
