--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/log_in.css/login_main.css">
   <link rel="stylesheet" href="css/details_css/day_night.css">
 
-  <script defer src="js/script.js"></script>
+  <script defer src="js/scriptLogin.js"></script>
 
   <script></script>
 
