--- a/src/views/page_select.ejs
+++ b/src/views/page_select.ejs
@@ -65,9 +65,9 @@
             <p class="heading">Studies
             </p>
             <p class="para">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-              laboriosam at voluptas minus culpa deserunt delectus sapiente
-              inventore pariatur
+              You can save notes from lectures and textbooks, create lists of 
+              tasks or topics to review, and even store your test results for 
+              easy reference.
             </p>
             <a href="/page?id=1" class="btn" id="btn1">Visit</a>
           </div>
@@ -79,9 +79,8 @@
             <p class="heading">Work
             </p>
             <p class="para">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-              laboriosam at voluptas minus culpa deserunt delectus sapiente
-              inventore pariatur
+              Save notes from meetings and important documents, create task lists 
+              for projects, and store project status updates for easy reference.
             </p>
             <a href="/page?id=2" class="btn" id="2">Visit</a>
           </div>
@@ -93,9 +92,8 @@
             <p class="heading">Agenda
             </p>
             <p class="para">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-              laboriosam at voluptas minus culpa deserunt delectus sapiente
-              inventore pariatur
+              Keep track of appointments, deadlines, and events. Set reminders and 
+              organize your schedule to stay on top of your day.
             </p>
             <a href="/page?id=3" class="btn" id="3">Visit</a>
           </div>
@@ -107,9 +105,8 @@
             <p class="heading">Projects
             </p>
             <p class="para">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-              laboriosam at voluptas minus culpa deserunt delectus sapiente
-              inventore pariatur
+              Store project plans, timelines, and milestones. Keep track of tasks, 
+              team members, and progress updates.
             </p>
             <a href="/page?id=4" class="btn" id="4">Visit</a>
           </div>
@@ -121,9 +118,8 @@
             <p class="heading">Children
             </p>
             <p class="para">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-              laboriosam at voluptas minus culpa deserunt delectus sapiente
-              inventore pariatur
+              Save important information about your children's activities, such as schedules, 
+              school events, and extracurricular activities.
             </p>
             <a href="/page?id=5" class="btn" id="5">Visit</a>
           </div>
@@ -135,9 +131,8 @@
             <p class="heading">Classes
             </p>
             <p class="para">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-              laboriosam at voluptas minus culpa deserunt delectus sapiente
-              inventore pariatur
+              Keep track of class schedules, assignments, and study materials. Store lecture notes, 
+              review topics, and test results for each class.
             </p>
             <a href="/page?id=6" class="btn" id="6">Visit</a>
           </div>
