--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -46,7 +46,7 @@
 <body>
   <header>
     <a class="navbar-brand" href="#">ProjetoX</a>
-    <button id="saveButton">save</button>
+    <button id="saveButton" class="save_button">save</button>
     <div class="theme-switch">
       <input type="checkbox" id="theme-checkbox" />
       <label for="theme-checkbox">
