--- a/public/css/log_in.css/login_main.css
+++ b/public/css/log_in.css/login_main.css
@@ -7,7 +7,7 @@
     padding: 30px;
     flex-direction: column;
     align-items: center;
-    height: 100%;    
+    height: 92.5vh;    
     gap: 15px;
     position: relative;
    
