--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProjetoX</title>
+  <title>ActionPad</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid ">
-        <a class="navbar-brand title_text" href="#">ProjectX</a>
+        <a class="navbar-brand title_text" href="#">ActionPad</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-list"
