--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProjetoX</title>
+  <title>ActionPad</title>
 
     <script>
       const current_user = '<%- user %>';
@@ -45,7 +45,7 @@
 
 <body>
   <header>
-    <a class="navbar-brand" href="#">ProjetoX</a>
+    <a class="navbar-brand" href="#">ActionPad</a>
     <button id="saveButton" class="save_button">save</button>
     <div class="theme-switch">
       <input type="checkbox" id="theme-checkbox" />
