--- a/src/views/new_page.ejs
+++ b/src/views/new_page.ejs
@@ -32,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ">
-                <a class="navbar-brand title_text" href="#">ProjectX</a>
+                <a class="navbar-brand title_text" href="#">ActionPad</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-list"
