--- a/src/views/page_select.ejs
+++ b/src/views/page_select.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProjetoX</title>
+  <title>ActionPad</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -34,7 +34,7 @@
 
 <body>
   <header>
-    <a class="navbar-brand" href="#">ProjetoX</a>
+    <a class="navbar-brand" href="#">ActionPad</a>
 
     <div class="theme-switch">
       <input type="checkbox" id="theme-checkbox" />
@@ -138,6 +138,12 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="delete_div">
+      <form action="/delete" method="post"  >
+        <button id="deleteButton" class="delete_button" type="submit">Delete account</button>
+      </form>
+      
     </div>
   </main>
   <footer>
