Font color dark mode fixed

--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -94,6 +94,26 @@ article{
 
 p {
     color: black;
+} 
+
+li {
+    color: black;
+}
+
+span {
+    color: black;
+}
+
+strong {
+    color: black;
+}
+
+h3 {
+    color: black;
+}
+
+h4 {
+    color: black;
 }
 
 .ck-editor__main{
