--- a/public/css/page_select_css/page_select_main.css
+++ b/public/css/page_select_css/page_select_main.css
@@ -19,13 +19,19 @@ body {
 
 .card_display {
     margin-top: 80px;
-    display: grid;
+    display: flex;
     grid-template-columns:auto auto auto auto;
     grid-gap: 20px;
+    width: 100;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card_item {
     padding: 20px;
+    width: 424.73px;
+    height: 350px;
 }
 
 .add_page {
