Finalizando o projeto valeu Raissa

--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -45,7 +45,7 @@
 
 <body>
   <header>
-    <a class="navbar-brand" href="#">ActionPad</a>
+    <a class="navbar-brand" href="/page_select">ActionPad</a>
     <button id="saveButton" class="save_button">save</button>
     <div class="theme-switch">
       <input type="checkbox" id="theme-checkbox" />
